--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -29,10 +29,17 @@
     <ul class="nav nav-tabs" role="tablist">
         <li class="active" role="presentation"><a href="#pcpComments" aria-controls="pcpComments" role="tab" data-toggle="tab">Comments</a></li>
         <li role="presentation"><a href="#pcpDocuments" aria-controls="pcpDocuments" role="tab" data-toggle="tab">Related Documents</a></li>
-			<li role="presentation"><a href="#pcpOpenHouse" aria-controls="pcpOpenHouse" role="tab" data-toggle="tab">Open House Dates</a></li>
+		<li role="presentation"><a href="#pcpOpenHouse" aria-controls="pcpOpenHouse" role="tab" data-toggle="tab">Open Houses</a></li>
     </ul>
 
     <div class="pcp-tab-content tab-content">
+
+		<!-- Comments -->
+        <div class="tab-pane active" role="tab-panel" id="pcpComments">
+            <tmpl-public-comment-list x-period="period" x-project="project"></tmpl-public-comment-list>
+        </div><!-- / Comments Tab -->
+
+		<!-- Documents -->
         <div class="tab-pane" id="pcpDocuments">
             <div class="fb-body">
 				<div class="fb-list">
@@ -97,17 +104,30 @@
 					</ul>
 				</div>
 			</div>
-        </div>
-        <div class="tab-pane active" role="tab-panel" id="pcpComments">
-            <tmpl-public-comment-list x-period="period" x-project="project"></tmpl-public-comment-list>
-        </div>
-			<div class="tab-pane active" role="tab-panel" id="pcpOpenHouse">
-				<ul class="list-unstyled" >
-					<li ng-repeat="h in period.openHouses">
-						<strong>{{ h.eventDate | amDateFormat:'MMMM Do YYYY' }}</strong><span class="desc"> - {{ h.description }}</span>
-					</li>
-				</ul>
+        </div><!-- / Documents Tab -->
+
+		<!-- Open House Dates -->
+		<div class="tab-pane active" role="tab-panel" id="pcpOpenHouse">
+			<div class="table-container">
+				<table class="open-house-table table">
+					<thead>
+						<tr>
+							<th class="date-col">Date</th>
+							<th>Details</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-if="period.openHouses.length == 0">
+							<td colspan="2">No Open Houses scheduled for this comment period.</td>
+						</tr>
+						<tr ng-repeat="h in period.openHouses">
+							<td class="date-col">{{ h.eventDate | amDateFormat:'MMMM Do, YYYY' }}</td>
+							<td>{{ h.description }}</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
+		</div><!-- / Open House Dates -->
     </div>
 
 </div>
