ESM-775, ESM-776: disable Set Organization except for when in System > Edit Contact.

--- a/modules/users/client/views/user-edit-modal.html
+++ b/modules/users/client/views/user-edit-modal.html
@@ -17,6 +17,7 @@
 			x-enable-delete="enableDelete"
 			x-enable-save="enableSave"
 			x-enable-edit="enableEdit"
+			x-enable-set-organization="enableSetOrganization"
 			x-show-display-name="showDisplayName"
 			x-show-username="showUsername"
 			x-sref-return="srefReturn"
