--- a/modules/users/client/views/user-entry.html
+++ b/modules/users/client/views/user-entry.html
@@ -195,7 +195,7 @@
 				</div>
 			</div>
 			<div class="row" ng-hide="readonly">
-				<div class="col-md-4">
+				<div class="col-md-4" ng-show="enableSetOrganization">
 					<div class="form-group">
 						<label class="control-label">&nbsp;</label>
 						<button class="btn btn-default btn-sm" type="button"
