--- a/modules/users/client/views/user-edit.html
+++ b/modules/users/client/views/user-edit.html
@@ -22,6 +22,7 @@
 			x-enable-delete="enableDelete"
 			x-enable-save="enableSave"
 			x-enable-edit="enableEdit"
+			x-enable-set-organization="enableSetOrganization"
 			x-show-display-name="showDisplayName"
 			x-show-username="showUsername"
 			x-sref-return="srefReturn"
