ESM-735 - UI Improvements / Fixes for Contacts and System Roles Interfaces
- Updated the table to include new enhanced interface (table)
- Fixed an issue with wrapping columns
- Added user-search-chooser.scss (module specific stylesheet) and removed module UI customizations out of core.scss

--- a/modules/communications/client/views/recipients-manager.html
+++ b/modules/communications/client/views/recipients-manager.html
@@ -136,7 +136,7 @@
 				<td data-title="'Name'" filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}</td>
 				<td data-title="'Email'" filter="{'email':'text'}" sortable="'email'">{{o.email}}</td>
 				<td data-title="'Organization'" filter="{'org':'text'}" sortable="'org'">{{o.org}}</td>
-				<td class="actions-col" header-class="actions-col x1">
+				<td class="actions-col" header-class="'actions-col x1'">
 					<div class="btn-group">
 						<button class="btn icon-btn" ng-show="mode === 'edit'" type="button" ng-click="removeRecipient(o.email)">
 							<span class="glyphicon glyphicon-trash"></span>&nbsp;
