--- a/modules/users/client/views/user-search-chooser.html
+++ b/modules/users/client/views/user-search-chooser.html
@@ -2,7 +2,7 @@
 	<button type="button" class="btn btn-default close" ng-click="s.cancel()">
     	<span aria-hidden="true">&times;</span>
   	</button>
-	<h3 class="modal-title">{{s.title || 'Select Contacts'}} HERP DERP</h3>
+	<h3 class="modal-title">{{s.title || 'Select Contacts'}}</h3>
 </div>
 
 <div class="modal-body">
