--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -157,9 +157,7 @@
 								</span>
 								<span hidden class="col author-col">---</span>
 								<span class="col date-added-col">---</span>
-								<span class="col status-col last-col" ng-if="authentication.user">
-									<span ng-if="doc.model.published" title="Published"><span class="glyphicon glyphicon-ok-circle"></span></span>
-								</span>
+								<span class="col status-col last-col" ng-if="authentication.user">---</span>
 								<div class="row-actions">
 
 									<div class="btn-group" ng-if="doc.model.id === documentMgr.lastChecked.directoryID">
@@ -174,32 +172,6 @@
 														x-root="documentMgr.rootNode"
 														x-node="doc">
 													<span class="glyphicon glyphicon-edit"></span>
-												</button>
-											</li>
-											<li ng-if="project.userCan.manageFolders && !doc.model.published">
-												<button class="btn icon-btn" title="Publish Folder" ng-click="$event.stopPropagation();"
-														x-confirm-dialog
-														x-title-text="'Publish Folder'"
-														x-ok-text="'Yes'"
-														x-cancel-text="'No'"
-														x-confirm-text="'Are you sure you want to publish the selected folder?'"
-														x-confirm-items="[doc.model.name]"
-														x-on-ok="documentMgr.publishFolder"
-														x-ok-args="doc">
-													<span class="glyphicon glyphicon-ok-circle"></span>
-												</button>
-											</li>
-											<li ng-if="project.userCan.manageFolders && doc.model.published">
-												<button class="btn icon-btn" title="Unpublish Folder" ng-click="$event.stopPropagation();"
-														x-confirm-dialog
-														x-title-text="'Unpublish Folder'"
-														x-ok-text="'Yes'"
-														x-cancel-text="'No'"
-														x-confirm-text="'Are you sure you want to unpublish the selected folder?'"
-														x-confirm-items="[doc.model.name]"
-														x-on-ok="documentMgr.unpublishFolder"
-														x-ok-args="doc">
-													<span class="glyphicon glyphicon-ban-circle"></span>
 												</button>
 											</li>
 											<li ng-if="project.userCan.manageFolders">
