--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -4753,6 +4753,7 @@ tmpl-template-render {
 @import "modules/documents/client/styles/pdf-viewer.scss";
 
 /* MODULES */
+@import "modules/code-lists/client/scss/code-list.scss";
 @import "modules/communications/client/scss/communications.scss";
 @import "modules/invitations/client/scss/invitations.scss";
 @import "modules/projects/client/scss/project-schedule.scss";
