--- a/modules/code-lists/client/views/codelist-add-edit-modal.html
+++ b/modules/code-lists/client/views/codelist-add-edit-modal.html
@@ -1,38 +1,37 @@
-<form name="fieldForm" ng-submit="vm.submit(fieldForm.$valid)" novalidate>
+<form class="code-list-edit-value-form" name="fieldForm" ng-submit="vm.submit(fieldForm.$valid)" novalidate>
 
 	<div class="modal-header">
 		<button type="button" class="btn btn-default close" ng-click="vm.cancel()">
 			<span aria-hidden="true">&times;</span>
 		</button>
-		<h3 class="modal-title">{{vm.title}}</h3>
+		<h3 class="modal-title">{{vm.title}} Value</h3>
 	</div>
 
 	<div class="modal-body">
-		<div class="form-group" x-show-errors>
+		<div class="form-group" ng-class="{'has-error': vm.validationMessage}" x-show-errors>
 			<label class="control-label" for="display">Name<em class="required">(Required)</em></label>
 			<input class="form-control" ng-model="vm.display" id="display" name="display" title="Name" required></input>
+			<div class="help-block">
+				{{vm.validationMessage}}
+			</div>
 		</div>
 		<div class="form-group">
-			<label for="priority">
-				<input ng-model="vm.displayPriority" type="checkbox" id="priority" class="checkbox"/>
-				<span>Sorting Priority</span>
-			</label>
+			<div class="checkbox">
+				<label for="priority">
+					<input ng-model="vm.displayPriority" type="checkbox" id="priority"/> Sorting Priority
+				</label>
+			</div>
 		</div>
-		<div class="form-group" ng-if="vm.editMode">
+		<div class="checkbox" ng-if="vm.editMode">
 			<label for="active">
-				<input ng-model="vm.active" type="checkbox" id="active" class="checkbox"/>
-				<span>Active</span>
+				<input ng-model="vm.active" type="checkbox" id="active"/> Active
 			</label>
-		</div>
-
-		<div class="form-group">
-			<pre>{{vm.validationMessage}}</pre>
 		</div>
 
 	</div>
 
 	<div class="modal-footer">
 		<button type="button" class="btn btn-default" ng-click="vm.cancel()">Cancel</button>
-		<button type="submit" class="btn btn-primary" ng-click="vm.ok()"  ng-disabled="!vm.isValid">{{vm.okText}}</button>
+		<button type="submit" class="btn btn-primary" ng-click="vm.ok()" ng-disabled="!vm.isValid">{{vm.okText}}</button>
 	</div>
 </form>
