Fixing an issue with the tab states for Public Comment Period (main.html)

--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -107,7 +107,7 @@
         </div><!-- / Documents Tab -->
 
 		<!-- Open House Dates -->
-		<div class="tab-pane active" role="tab-panel" id="pcpOpenHouse">
+		<div class="tab-pane" role="tab-panel" id="pcpOpenHouse">
 			<div class="table-container">
 				<table class="open-house-table table">
 					<thead>
