ESM-865 Case insensitive validation check and prevent empty value

--- a/modules/code-lists/client/views/code-list-list.html
+++ b/modules/code-lists/client/views/code-list-list.html
@@ -16,7 +16,7 @@
 					ng-selected="t.name === vm.currentField.name">
 				</select>
 				<span class="input-group-btn">
-					<button	class="btn btn-default" title="Add New Value"
+					<button	class="btn btn-default" title="Add new {{vm.currentField.displayName}}"
 						ng-click="vm.openAddEdit();$event.stopPropagation();">
 						<span class="glyphicon glyphicon-plus"></span>
 					</button>
