--- a/modules/code-lists/client/views/codelist-add-edit-modal.html
+++ b/modules/code-lists/client/views/codelist-add-edit-modal.html
@@ -9,7 +9,7 @@
 
 	<div class="modal-body">
 		<div class="form-group" ng-class="{'has-error': vm.validationMessage}" x-show-errors>
-			<label class="control-label" for="display">Name<em class="required">(Required)</em></label>
+			<label class="control-label" for="display">Name</label>
 			<input class="form-control" ng-model="vm.display" id="display" name="display" title="Name" required></input>
 			<div class="help-block">
 				{{vm.validationMessage}}
