ESM-888 minor code fixes

--- a/modules/core/client/views/st-template.html
+++ b/modules/core/client/views/st-template.html
@@ -2,7 +2,7 @@
 
 	<li ng-class="{disabled: currentPage == 1}">
 		<a ng-click="selectPage(currentPage-1)" aria-label="Previous">
-			<span aria-hidden="true"><<</span>
+			<span class="glyphicon glyphicon-backward"></span>
 		</a>
 	</li>
 
@@ -11,7 +11,7 @@
 	</li>
 
 	<li ng-show="pages.indexOf(2) == -1"><a
-			ng-click="selectPage(pages[0])"><</a>
+			ng-click="selectPage(pages[0])"><span class="glyphicon glyphicon-chevron-left"></a>
 	</li>
 
 	<li ng-repeat="page in pages" ng-class="{active: page==currentPage}"><a
@@ -19,7 +19,7 @@
 	</li>
 
 	<li ng-show="pages.indexOf(numPages -1) == -1"><a
-			ng-click="selectPage(pages[pages.length - 1])">></a>
+			ng-click="selectPage(pages[pages.length - 1])"><span class="glyphicon glyphicon-chevron-right"></a>
 	</li>
 
 	<li ng-show="pages.indexOf(numPages) == -1"><a
@@ -28,7 +28,7 @@
 
 	<li ng-class="{disabled: currentPage == numPages}">
 		<a ng-click="selectPage(currentPage+1)" aria-label="Next">
-			<span aria-hidden="true">>></span>
+			<span class="glyphicon glyphicon-forward"></span>
 		</a>
 	</li>
 </ul>
