--- a/modules/documents/client/views/docs.html
+++ b/modules/documents/client/views/docs.html
@@ -1,9 +1,48 @@
-<div class="view-title-container flex-row">
+<div class="view-title-container">
+
 	<button class="btn icon-btn mobile-nav-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
 	<h1>Documents</h1>
-	<div class="actions">
-		<button class="btn btn-default btn-sm" x-modal-document-instructions><span class="glyphicon glyphicon-info-sign"></span><span>Instructions</span></button>
+	
+	<div class="search-widget collapsed">
+		<div class="sw-resize-container">
+			
+			<button class="sw-expand-btn btn icon-btn" onclick="expandSearchWidget();"><i class="glyphicon glyphicon-search"></i></button>
+			
+			<input class="form-control sw-input" type="text" placeholder="Search" />
+			
+			<button class="sw-toggle-btn dropdown-toggle btn icon-btn"
+				data-toggle="dropdown"
+				data-target="swAdvanced">
+				<i class="glyphicon glyphicon-triangle-bottom"></i>
+			</button>
+			<button class="sw-collapse-btn btn icon-btn" onclick="collapseSearchWidget();">
+				<span aria-hidden="true">&times;</span>
+			</button>
+
+			<div class="dropdown-menu" id="swAdvanced" ng-click="$event.stopPropagation()">
+				<form id="swForm" class="sw-form">
+					<div class="form-group">
+						<label>Name</label>
+						<input class="form-control" type="text" id="swName" />
+					</div>
+					<div class="form-group">
+						<label>Keywords</label>
+						<input class="form-control" type="text" id="swKeywords" />
+					</div>
+					<div class="sw-form-btns">
+						<button class="btn btn-primary" onclick="searchDocs();">Search</button>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
+
+	<div class="actions">
+		<button class="btn icon-btn" x-modal-document-instructions>
+			<i class="glyphicon glyphicon-info-sign"></i>
+		</button>
+	</div>
+
 </div>
 
 <div class="view-body-container file-browser-container">
