ESM-822 - Search Widget UI Development

--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -56,6 +56,9 @@
           $('.sw-input').val('');
           document.getElementById('swForm').reset();
         }
+        function resetSwForm() {
+          document.getElementById('swForm').reset();
+        }
         function searchDocs() {
           $('.search-widget').removeClass('expanded');
           $('.search-widget').addClass('collapsed');
