--- a/modules/search/client/scss/search-widget.scss
+++ b/modules/search/client/scss/search-widget.scss
@@ -2,6 +2,10 @@ $search-widget-input-bg: #fff;
 $search-widget-focus-color: #5091cd;
 $search-widget-btn-offset: 0.1rem;
 
+.custom-nav {
+    display: none;
+}
+
 .search-widget {
     text-align: right;
 
@@ -108,6 +112,20 @@ $search-widget-btn-offset: 0.1rem;
     }
 }
 
+@media (max-width: 750px) {
+    .search-widget {
+        .dropdown-menu {
+            position: fixed;
+            top: 11.4rem;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            margin: 0;
+            border: none;
+        }
+    }
+}
+
 @media (min-width: 760px) {
     .search-widget {
         &.collapsed,
@@ -159,7 +177,8 @@ $search-widget-btn-offset: 0.1rem;
         text-align: right;
 
         .btn {
-            padding: 0.65rem 1.2rem;
+            padding: 0.7rem 1.2rem;
+            min-width: 10rem;
             text-transform: uppercase;
             font-size: 1.3rem;
         }
