--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -2,12 +2,15 @@
 	<div class="view-title-container flex-row">
 		<h1><span ng-show="project.name">Add/Edit Comment Period</h1>
 		<div class="actions">
-			<a class="btn btn-default btn-sm" ui-sref="p.commentperiod.list">Cancel</a>
-			<a class="btn btn-primary btn-sm" href ng-click="save()">Save</a>
+			<a class="btn btn-default btn-sm" ui-sref="p.commentperiod.list" ng-disabled="busy">Cancel</a>
+			<a class="btn btn-primary btn-sm" href ng-click="save()" ng-disabled="busy">Save</a>
 		</div>
 	</div>
 
 	<div class="view-body-container">
+		<div class="spinner-container" ng-show="busy">
+			<div class="spinner-new rotating"></div>
+		</div>
 
     <div ng-show="hasErrors" class="alert alert-danger flex-row">
 		<div class="alert-icon"><span class="glyphicon glyphicon-exclamation-sign"></span></div>
